[package]
name = "fundraiser-pinocchio"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pinocchio = "=0.8.1"
pinocchio-log = "0.4.0"
pinocchio-pubkey = "0.2.4"
pinocchio-system = "0.2.3"
pinocchio-token = "0.3.0"

[dev-dependencies]
solana-sdk = "2.0.0"
mollusk-svm = "0.1.4"
mollusk-token = { git = "https://github.com/deanmlittle/mollusk" }
spl-token = "8.0.0"
mollusk-svm-bencher = "0.1.4"
five8_const = "0.1.3"


[features]
no-entrypoint = []
std = []
test-default = ["no-entrypoint", "std"]
bench-default = ["no-entrypoint", "std"]
